src/objects/Change_Management__c.object
<CustomObject>
    <description>Used to collect requirements, track progress and testing, and record history of changes made to Salesforce and Force applications.</description>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person responsible for completing this change.</description>
        <inlineHelpText>Person with overall responsibility for completing this change.</inlineHelpText>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter name of buisness approver, if one is needed</inlineHelpText>
        <label>Business Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Management2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Case__c</fullName>
        <description>Why this change needs to be made.</description>
        <inlineHelpText>Business problem to be solved by this change</inlineHelpText>
        <label>Business Case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Communication_Plan__c</fullName>
        <description>Describes how the change will be communicated to users.</description>
        <inlineHelpText>Describe users affected and how the change will be communicated to them.</inlineHelpText>
        <label>Communication Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buttons and Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permission Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Record Types</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Types</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Layouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow Rule</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing (Sandbox)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tester (User/Production)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Implemented__c</fullName>
        <description>Date change was put into production</description>
        <label>Date Implemented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer_comments__c</fullName>
        <label>Developer comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Team_Members__c</fullName>
        <inlineHelpText>Enter names of AECOM staff involved</inlineHelpText>
        <label>Implementation Team Members</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implemented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implemented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outside_Resources_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do we need to hire an outside consultant due to resource constraints (time or talent)?</description>
        <inlineHelpText>Do we need to hire an outside consultant due to resource constraints (time or talent)?</inlineHelpText>
        <label>Outside Resources Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_implementation_Notes__c</fullName>
        <description>Tasks that need to be done after implementation, such as data transformation</description>
        <inlineHelpText>Tasks that need to be done after implementation, such as data transformation</inlineHelpText>
        <label>Post-implementation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User or other AECOM employee who requested this change</description>
        <inlineHelpText>User or other AECOM employee who requested this change</inlineHelpText>
        <label>Requested by</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Change Management</relationshipLabel>
        <relationshipName>Change_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <description>Detailed description of needs</description>
        <inlineHelpText>Detailed description of needs</inlineHelpText>
        <label>Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requires_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if approval is required and enter approver(s) in approver fields</inlineHelpText>
        <label>Requires Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Object__c</fullName>
        <inlineHelpText>Object affected by this change.</inlineHelpText>
        <label>Salesforce Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acct Plan/Qtr Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Departments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Data Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go-NoGo Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME GNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note &amp; Attachment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxonomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheduled_implementation_date__c</fullName>
        <description>Date change is scheduled for production</description>
        <inlineHelpText>Date change is scheduled for production</inlineHelpText>
        <label>Scheduled implementation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Administrator_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select Salesforce System Administrator for technical approval</inlineHelpText>
        <label>System Administrator Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Id</field>
                <operation>equals</operation>
                <value>00e30000001G5JZ</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_s_Affected__c</fullName>
        <description>Indicates whether this affects Salesforce, the GDP, or both.</description>
        <inlineHelpText>Does this affect Salesforce, the GDP, or both?</inlineHelpText>
        <label>System(s) Affected</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Test_Plan__c</fullName>
        <description>Describes how the changes will be tested.</description>
        <inlineHelpText>Describe how the changes will be tested.</inlineHelpText>
        <label>Test Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Change Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Implemented__c</columns>
        <columns>Current_Status__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Salesforce_Object__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Issue__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NancyOpen</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Business_Case__c</columns>
        <columns>Priority__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Scheduled_implementation_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implemented__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Assigned_to__c</field>
            <operation>startsWith</operation>
            <value>Nancy</value>
        </filters>
        <filters>
            <field>Implementation_Team_Members__c</field>
            <operation>contains</operation>
            <value>Nancy</value>
        </filters>
        <label>NancyOpen</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>Current_Status__c</columns>
        <columns>Requested_by__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Priority__c</columns>
        <columns>Scheduled_implementation_date__c</columns>
        <columns>Assigned_to__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implemented__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Change Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>